<resources>
    <string name="app_name">Grab_Technician : กรุงเทพมหานคร</string>
    <string name="opendrawer">Open</string>
    <string name="title_activity_maps_customer">Map</string>

    <!--Appbar ConTent-->
    <string name="Search">ค้นหา</string>
    <string name="Favorite">ที่ชื่นชอบ</string>
    <string name="AboutMe">เกี่ยวกับฉัน</string>
    <!--End Appbar ConTent-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search__technician">Map</string>

    <string name="date_detail"> เวลาทำการ:</string>
    <string name="low_price"> ราคาขั้นต่ำ:</string>
    <string name="category"> อุปกรณ์ที่รับซ่อม:</string>
    <string name="name_store">ชื่อร้าน:</string>

    <!--RatingBar-->
    <string name="RatingAudit">ให้คะแนน</string>

    <!--DetailTehcnician-->
    <string name="Detail">รายละเอียด :</string>
    <string name="RepairEquipment">อุปกรณ์ที่รับซ่อม :</string>
    <string name="cost">ราคาต่อชิ้น :</string>
    <string name="Address">ที่อยูของ่ร้าน :</string>
    <string name="ButtonForRent">จอง</string>

    <!--TechnicianForRent-->
    <string name="AddressTechnician">ใส่ที่อยู่ :</string>
    <string name="DateTechnician">ใส่วันที่ :</string>
    <string name="TimeTechnician">ใส่เวลา :</string>
    <string name="Repair">อุปรณ์ที่จะซ่อม :</string>

    <!--Button-->
    <string name="ok">ตกลง</string>
    <string name="cancel">ยกเลิก</string>
    <string name="back">ย้อนกลับ</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="AllDetail">ดูรายละเอียดทั้งหมด</string>

    <!--main_technician-->
    <string name="bar_chart">ดูสถิติ</string>
    <string name="build_store">สร้างร้านค้า</string>
    <string name="log_out">ออกจากระบบ</string>

    <!--build_store-->
    <string name="time_start">เวลาเปิด :</string>
    <string name="time_end">เวลาปิด :</string>
    <string name="store_address">ใส่ที่อยู่ร้าน :</string>
    <string name="store">กรุณากรอกชื่อร้าน :</string>
    <string name="equipment_cost">ราคาเริ่มต้น :</string>
    <string name="location">ที่ตั้ง :</string>
    <string name="look_location">ดูที่ตั้ง</string>
    <string name="tel">เบอร์โทรศัพท์ :</string>
        <!--build_store_address-->
            <string name="street">ถนน :</string>
            <string name="District">แขวง :</string>
            <string name="county">เขต :</string>
            <string name="house_number">บ้านเลขที่ :</string>
                <!--CheckErrorEditText-->
                    <string name="err_msg_name">Please enter a Name</string>
                    <string name="err_msg_required">กรุณากรอกข้อมูลให้ครบ</string>
                    <string name="err_msg_repair">Please enter a Repair</string>
                    <string name="err_msg_start_location">กรุณากดตรงดูที่ตั้ง</string>
                        <!--CheckLocation-->
                            <string name="LocationTrace">ไม่สามรถระบุตำแหน่งของคุณได้</string>
    <!--SpinnerArray_GetArea-->
    <string-array name="get_area">
        <item>กรุณาเลือกเขต</item>
        <item>เขตพระนคร</item>
        <item>เขตดุสิต</item>
        <item>เขตหนองจอก</item>
        <item>เขตบางรัก</item>
        <item>เขตบางเขน</item>
        <item>เขตบางกะปิ</item>
        <item>เขตปทุมวัน</item>
        <item>เขตป้อมปราบศัตรูพ่าย </item>
        <item>เขตพระโขนง</item>
        <item>เขตมีนบุรี</item>
    </string-array>
</resources>
