<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phobia.grab_technicain.Build_Store">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="-"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintLeft_toRightOf="@+id/time_start"
        app:layout_constraintRight_toLeftOf="@+id/time_end"
        app:layout_constraintTop_toBottomOf="@+id/equipment" />

    <ImageView
        android:id="@+id/picture_store"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <LinearLayout
        android:id="@+id/store"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/picture_store"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp">>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_store"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/equipment"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/store"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/repair_equipment"
                android:layout_width="180dp"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/RepairEquipment"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Tel"
                android:layout_width="180dp"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/Tel_technician"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:inputType="text|number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_start"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/equipment"
        tools:layout_editor_absoluteX="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/time_work_begin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_start"
                android:inputType="time" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_end"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/time_start"
        app:layout_constraintTop_toBottomOf="@+id/equipment">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/time_work_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_end"
                android:inputType="time" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cost"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toRightOf="@+id/time_end"
        app:layout_constraintTop_toBottomOf="@+id/equipment">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cost_begin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/begin_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/equipment_cost"
                android:inputType="text|number" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/time_start"
        app:layout_constraintTop_toBottomOf="@+id/time_start">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/AddressTechnician"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/member_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/house_number"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/home_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_number"
                    android:inputType="text|number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/street_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/streert_address"
                android:layout_width="140dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/address1"
        app:layout_constraintTop_toBottomOf="@+id/address1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/distric_address"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/District"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/area_address"
                android:layout_width="140dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/county"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/address1"
        app:layout_constraintTop_toBottomOf="@+id/address2">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="13dp"
            android:layout_weight="1"
            android:text="@string/location"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lat_location"
                android:layout_width="90dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lat_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="lat :"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lng_location"
                android:layout_width="90dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lng_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="lng :"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/location_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:gravity="center"
            android:text="@string/look_location"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/back"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:theme="@style/MyRaisedButton2" />

        <Button
            android:id="@+id/ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:theme="@style/MyRaisedButton" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
