<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phobia.grab_technicain.Main_Technician">

    <!--<RelativeLayout-->
        <!--android:id="@+id/bottom_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_gravity="bottom"-->
        <!--&gt;-->

        <!--<android.support.design.widget.BottomNavigationView-->
            <!--android:id="@+id/bottom_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@drawable/navigation_bottom_bar"-->
            <!--app:menu="@menu/technician_menu">-->
        <!--</android.support.design.widget.BottomNavigationView>-->
    <!--</RelativeLayout>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/picture_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_build_black_24dp" />

            <Button
                android:id="@+id/build_store"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/build_store"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bar_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_bar_chart2" />

            <Button
                android:id="@+id/chart"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/bar_chart"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_logout" />

            <Button
                android:id="@+id/out"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:text="@string/log_out"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
